# chatpdf

./: .gitignore  README.md  main.py  pyproject.toml
src/chat_pdf_api_service/: __init__.py
src/chat_pdf_api_service/dependencies/: __init__.py  file_validation.py  jwt_verification.py
src/chat_pdf_api_service/helpers/: __init__.py  database.py  loader.py  otp.py  splitter.py  token_generator.py  websocket.py
src/chat_pdf_api_service/modules/: __init__.py
src/chat_pdf_api_service/modules/authentication/: __init__.py  model.py  route.py  schema.py
src/chat_pdf_api_service/modules/rag/: __init__.py  model.py  route.py
src/chat_pdf_api_service/services/: __init__.py
src/chat_pdf_api_service/services/email/: __init__.py  plunk.py
src/chat_pdf_api_service/services/llm/: __init__.py
src/chat_pdf_api_service/services/llm/gemini/: gemini.py
src/chat_pdf_api_service/services/llm/nlp/: __init__.py
src/chat_pdf_api_service/services/qdrant/: __init__.py  qdrant.py
src/chat_pdf_api_service/utils/: __init__.py  database.py  logger.py
