[tool.poetry]
name = "chat-pdf-api-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel",email = "emmanuelhilary9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
packages = [{include = "chat_pdf_api_service", from = "src"}]

[tool.poetry.dependencies]
"fastapi[standard] (>=0.115.12,<0.116.0)",
"langchain-community (>=0.3.24,<0.4.0)",
"pypdf (>=5.5.0,<6.0.0)",
"langchain-google-genai (>=2.1.4,<3.0.0)",
"langchain-qdrant (>=0.2.0,<0.3.0)",
"websockets (>=15.0.1,<16.0.0)",
"langchain[google-genai] (>=0.3.25,<0.4.0)",
"langgraph (>=0.4.7,<0.5.0)",
"langchain-cli (>=0.0.36,<0.0.37)",
"pyjwt (>=2.10.1,<3.0.0)",
"beanie (>=1.29.0,<2.0.0)",
"bcrypt (>=4.3.0,<5.0.0)"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
